syntax = "proto3";

package auth.v1;

option go_package = "github.com/alexxpetrov/identia-be/gen/auth/v1;authv1";

message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

message RegisterResponse {
  string access_token = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message BeginRegistrationRequest {}

message BeginRegistrationResponse {
  bytes challenge = 1;
  string rp_id = 2;
}

message FinishRegistrationRequest {
  string credential_id = 1;
  bytes attestation_object = 2;
  bytes client_data_json = 3;
}

message FinishRegistrationResponse {
  string accessToken = 1;
}

message BeginLoginRequest {}

message BeginLoginResponse {
  bytes challenge = 1;
  string rp_id = 2;
}

message FinishLoginRequest {
  string credential_id = 1;
  bytes authenticator_data = 2;
  bytes client_data_json = 3;
  bytes signature = 4;
}

message FinishLoginResponse {
  string accessToken = 1;
}

message RefreshAccessTokenRequest {
  string userId = 1;
  string accessToken = 2;
}

message RefreshAccessTokenResponse {
  string accessToken = 1;
}

message LogoutRequest {
  string accessToken = 1;
}

message LogoutResponse {
  bool ok = 1;
}

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc BeginRegistration (BeginRegistrationRequest) returns (BeginRegistrationResponse);
  rpc FinishRegistration (FinishRegistrationRequest) returns (FinishRegistrationResponse);
  rpc BeginLogin (BeginLoginRequest) returns (BeginLoginResponse);
  rpc FinishLogin (FinishLoginRequest) returns (FinishLoginResponse);
  rpc RefreshAccessToken (RefreshAccessTokenRequest) returns (RefreshAccessTokenResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}